hellokube-greeting.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: docker-hello-greeting
spec:
  type: NodePort
  ports:
  - port: 8688
    protocol: TCP
    targetPort: 8080
  selector:
    run: docker-hello-greeting
status:
  loadBalancer: {}
---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: docker-hello-greeting
  name: docker-hello-greeting
spec:

  replicas: 1
  selector:
    matchLabels:
      run: docker-hello-greeting
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: docker-hello-greeting
        app: docker-hello-greeting
    spec:
      containers:
      - image: pradeepflx/docker-hello-greeting
        imagePullPolicy: Always
        name: docker-hello-greeting
        resources: {}
        ports:
        - containerPort: 8080
          protocol: TCP
status: {}
